<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroMyInformation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/intro_back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_icon_back2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/intro_cs_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_netflix_logo3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/intro_back_btn" />

               

                <TextView
                    android:id="@+id/intro_cs_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/netflixsansbold"
                    android:text="@string/intro_info_text1"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_logo" />

                <TextView
                    android:id="@+id/intro_cs_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/netflixsansthin"
                    android:text="@string/intro_info_text2"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text1" />

                <TextView
                    android:id="@+id/intro_cs_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/netflixsansbold"
                    android:text="@string/intro_info_text3"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text2" />

                <TextView
                    android:id="@+id/intro_cs_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/netflixsansthin"
                    android:text="@string/intro_info_text4"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text3" />

                <TextView
                    android:id="@+id/intro_cs_text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/netflixsansthin"
                    android:text="@string/intro_info_text5"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text4" />

                <TextView
                    android:id="@+id/intro_cs_text6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/netflixsansbold"
                    android:text="@string/intro_info_text6"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text5" />

                <TextView
                    android:id="@+id/intro_cs_text7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/netflixsansthin"
                    android:text="@string/intro_info_text7"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text6" />

                <TextView
                    android:id="@+id/intro_cs_text8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/netflixsansregular"
                    android:text="@string/intro_info_text8"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text7" />

                <TextView
                    android:id="@+id/intro_cs_text9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/netflixsansthin"
                    android:text="@string/intro_info_text9"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text8" />

                <TextView
                    android:id="@+id/intro_cs_text10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/netflixsansthin"
                    android:text="@string/intro_info_text10"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text9" />

                <TextView
                    android:id="@+id/intro_cs_text11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/netflixsansthin"
                    android:text="@string/intro_info_text11"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text10" />

                <TextView
                    android:id="@+id/intro_cs_text_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro_cs_text11" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>