<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_clayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/black">

        <ImageView
            android:id="@+id/login_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_icon_back2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_netflix_logo3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/login_customer_center"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginRight="20dp"
            android:adjustViewBounds="true"
            android:fontFamily="@font/netflixsansbold"
            android:src="@drawable/ic_netflix_cus_center"
            android:text="고객 센터"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#131313"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_clayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/ic_login_edit_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.35"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/gray"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/gray"
                android:textColorHighlight="@color/gray"
                android:fontFamily="@font/netflixsansregular"
                android:textCursorDrawable="@color/white"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:background="@color/transparency"
                android:textColor="@color/white"
                 />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/ic_login_edit_btn"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.35"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/gray"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:backgroundTint="@color/gray"
                android:textColorHighlight="@color/gray"
                android:fontFamily="@font/netflixsansregular"
                android:textCursorDrawable="@color/white"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:background="@color/transparency"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/ic_login_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <ImageView
            android:id="@+id/login_register_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/ic_login_register_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_login_btn" />

        <TextView
            android:id="@+id/login_password_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/netflixsansmedium"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:gravity="center"
            android:text="@string/login_password_reset"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/login_register_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/login_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/netflixsansmedium"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:gravity="center"
            android:text="@string/login_text1"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/login_password_reset"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/intro1_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/netflixsansmedium"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:gravity="center"
            android:text="@string/login_text2"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/login_text1"
            app:layout_constraintLeft_toLeftOf="@+id/login_text1"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/intro1_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/netflixsansbold"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:gravity="center"
            android:text="@string/login_text3"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="3dp"
            app:layout_constraintTop_toBottomOf="@+id/login_text1"
            app:layout_constraintLeft_toRightOf="@+id/intro1_text2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>