<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".IntroCustomerService"
    android:id="@+id/intro_customer_flayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/intro_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icon_back2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ImageView
            android:id="@+id/intro_cs_logo"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/ic_netflix_logo3"
            android:adjustViewBounds="true"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="@+id/intro_back_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/intro_cs_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_cs_text1"
            android:fontFamily="@font/netflixsansbold"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_logo"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/intro_icon1"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_icon_cs_center"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_text1"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/intro_icon1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:gravity="center"
            android:text="고객 센터"
            android:textColor="@color/iphone_blue"
            android:fontFamily="@font/netflixsansmedium"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_text1"
            app:layout_constraintLeft_toRightOf="@+id/intro_icon1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="28dp"/>
        <ImageView
            android:id="@+id/intro_icon1_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_intro_cs_line"
            android:scaleType="fitXY"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/intro_icon1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/intro_icon2"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_icon_my_info"
            app:layout_constraintTop_toBottomOf="@+id/intro_icon1_line"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/intro_icon2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:gravity="center"
            android:text="개인정보"
            android:textColor="@color/iphone_blue"
            android:fontFamily="@font/netflixsansmedium"
            app:layout_constraintTop_toBottomOf="@+id/intro_icon1_line"
            app:layout_constraintLeft_toRightOf="@+id/intro_icon2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"/>
        <ImageView
            android:id="@+id/intro_icon2_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_intro_cs_line"
            android:scaleType="fitXY"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/intro_icon2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/intro_icon3"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_icon_shield"
            app:layout_constraintTop_toBottomOf="@+id/intro_icon2_line"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/intro_icon3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:gravity="center"
            android:text="이용 약관"
            android:textColor="@color/iphone_blue"
            android:fontFamily="@font/netflixsansmedium"
            app:layout_constraintTop_toBottomOf="@+id/intro_icon2_line"
            app:layout_constraintLeft_toRightOf="@+id/intro_icon3"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"/>
        <ImageView
            android:id="@+id/intro_icon3_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_intro_cs_line"
            android:scaleType="fitXY"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/intro_icon3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/intro_cs_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_cs_text2"
            android:fontFamily="@font/netflixsansbold"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_icon3_line"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/intro_cs_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/intro_cs_text3"
            android:textColor="@color/black"
            android:fontFamily="@font/netflixsanslight"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_text2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/intro_cs_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/intro_cs_text4"
            android:textColor="@color/black"
            android:fontFamily="@font/netflixsanslight"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_text3"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/intro_cs_reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_intro_cs_reset_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_text4"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ImageView
            android:id="@+id/intro_cs_reset_btn_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_intro_cs_line2"
            android:scaleType="fitXY"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_reset_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/intro_cs_text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_cs_text5"
            android:fontFamily="@font/netflixsansbold"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_reset_btn_line"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/intro_cs_text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/intro_cs_text6"
            android:textColor="@color/black"
            android:fontFamily="@font/netflixsanslight"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_text5"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/intro_cs_call_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_intro_cs_call_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_text6"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ImageView
            android:id="@+id/intro_cs_chatting_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_intro_cs_chatting_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_text6"
            app:layout_constraintLeft_toRightOf="@+id/intro_cs_call_btn"/>

        <TextView
            android:id="@+id/intro_text_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/intro_cs_chatting_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="80dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>